crates/zenith/tests/snapshots/screens__session_version__80x24__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
    ok   solar.version 1.0.0 · 0.48 ms · 0.17 ms in SOLAR · #3

      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   solar_version            0.1.0
   protocol                 solar/1
   manifest_schema_version  2.0.0
   build
     git_commit_short  c9c566b22e2b
     profile           release
     rustc_version     rustc 1.97.1
     target            x86_64-pc-windows-msvc
┌──────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                               │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.48 ms ─── in orbit 2s ────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-72  #646365 on #0B0C14
 0: 73-73  #FFC23D on #0B0C14 bold
 0: 74-79  #9C9A97 on #0B0C14
 1:  3-6   #FFC23D on #0B0C14 bold reversed
 1:  9-21  #FFC23D on #0B0C14
 1: 22-27  #9C9A97 on #0B0C14
 1: 38-61  #9C9A97 on #0B0C14
 3:  3-18  #FFC23D on #0B0C14
 4:  3-18  #FFC23D on #0B0C14
 5:  3-18  #FFC23D on #0B0C14
 5: 22-26  #FFC23D on #0B0C14 bold
 6:  3-18  #FFC23D on #0B0C14
 7:  3-18  #FFC23D on #0B0C14
 7: 22-30  #9C9A97 on #0B0C14
 8:  3-18  #FFC23D on #0B0C14
 8: 22-26  #9C9A97 on #0B0C14
 9:  3-18  #FFC23D on #0B0C14
10:  3-18  #FFC23D on #0B0C14
12:  3-25  #FFC23D on #0B0C14
13:  3-25  #FFC23D on #0B0C14
14:  3-25  #FFC23D on #0B0C14
15:  3-7   #FFC23D on #0B0C14
16:  5-20  #FFC23D on #0B0C14
17:  5-20  #FFC23D on #0B0C14
18:  5-20  #FFC23D on #0B0C14
19:  5-20  #FFC23D on #0B0C14
20:  0-79  #646365 on #0B0C14
21:  0-0   #646365 on #0B0C14
21:  1-3   #FFC23D on #0B0C14
21:  4-47  #9C9A97 on #0B0C14
21: 79-79  #646365 on #0B0C14
22:  0-79  #646365 on #0B0C14
23:  0-2   #646365 on #0B0C14
23:  3-3   #FFC23D on #0B0C14
23:  4-6   #646365 on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
23: 18-20  #9C9A97 on #0B0C14
23: 28-32  #646365 on #0B0C14
23: 33-42  #9C9A97 on #0B0C14
23: 50-54  #646365 on #0B0C14
23: 55-63  #9C9A97 on #0B0C14
23: 66-79  #646365 on #0B0C14
