crates/zenith/tests/snapshots/screens__session_version__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys
    ok   solar.version 1.0.0 - 0.48 ms - 0.17 ms in SOLAR - #3

      ..######..
    .############.
   .####              SOLAR
   ################   The central API of the Constellation
   ################   NIPS-CERN
              ####'   0.1.0
    '############'
      ''######''

   solar_version            0.1.0
   protocol                 solar/1
   manifest_schema_version  2.0.0
   build
     git_commit_short  c9c566b22e2b
     profile           release
     rustc_version     rustc 1.97.1
     target            x86_64-pc-windows-msvc
+------------------------------------------------------------------------------+
| > Type / for the commands, or ? for every key.                               |
+------------------------------------------------------------------------------+
 --*-- SOLAR 0.1.0 - solar/1 --- last call 0.48 ms --- in orbit 2s ------------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 10-18  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 1:  3-6   - on - bold reversed
 1:  9-21  - on - bold
 5: 22-26  - on - bold
12:  3-25  - on - bold
13:  3-25  - on - bold
14:  3-25  - on - bold
15:  3-7   - on - bold
16:  5-20  - on - bold
17:  5-20  - on - bold
18:  5-20  - on - bold
19:  5-20  - on - bold
20:  0-79  - on - dim
21:  0-0   - on - dim
21:  1-3   - on - bold
21: 79-79  - on - dim
22:  0-79  - on - dim
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-17  - on - bold
23: 28-32  - on - dim
23: 50-54  - on - dim
23: 66-79  - on - dim
